# cabrnet

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  VERSION  environment.yml  fetch_legacy_repos.sh  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt
ci/: docstring_check.sh  formatting.sh  generate_doc.sh  install_and_build.sh  typecheck.sh
configs/benchmarks/: test_configuration.yml  test_configuration_simple.yml
configs/explanation/: mnist_visualization.yml  visualization.yml
configs/pipnet/cub200/: dataset.yml  model_arch.yml
configs/pipnet/stanford_cars/: dataset.yml  training.yml
configs/protopnet/: cub200.yml  model.yml  training.yml  visualization.yml
configs/protopnet/cifar10/: dataset.yml  training.yml
configs/protopnet/cifar100/: dataset.yml  model_arch.yml  training.yml
configs/protopnet/cub200/: dataset.yml  model_arch.yml  training.yml
configs/protopnet/flowers102/: dataset.yml  model_arch.yml
configs/protopnet/mnist/: model.yml  model_arch.yml  model_arch_onnx.yml  training.yml  visualization.yml
configs/protopnet/mnist_with_bayesian_optimization/: dataset.yml  model_arch.yml  search_space.yml  training.yml
configs/protopnet/oxford_iiit_pet/: dataset.yml  model_arch.yml  training.yml
configs/protopnet/stanford_cars/: dataset.yml  model_arch.yml  training.yml
configs/protopool/cub200/: dataset.yml  model_arch.yml  training.yml
configs/protopool/mnist/: model_arch.yml  training.yml
configs/protopool/stanford_cars/: dataset.yml  model_arch.yml  training.yml
configs/prototree/: model.yml  training.yml  visualization.yml
configs/prototree/cub200/: dataset.yml  model_arch.yml  training.yml  visualization.yml
configs/prototree/mnist/: dataset.yml  model.yml  model_arch.yml  training.yml  visualization.yml
configs/prototree/stanford_cars/: dataset.yml  model_arch.yml  training.yml
docs/: README.md  mkdocs.yml  pydoc-markdown.yml
docs/manuals/: Makefile  applications.md  cabrnet.md  data.md  download.md  evaluation.md  index.md  install.md  legacy.md  merge_manuals.py  mnist.md  model.md  optimizers.md  training.md  visualize.md
docs/packaging/: README.md  build.md
docs/website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json
docs/website/blog/: 2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  2024-05-30-release.md  2024-10-24-ecai-tutorial.mdx  authors.yml
docs/website/docs/: intro.md
docs/website/docs/reference/: main.md  sidebar.json
docs/website/src/pages/: index.js  materials.mdx
docs/website/static/bibliography/: publications.bib
src/: main.py  main_gui.py
src/apps/: bayesian_optimizer.py  benchmark.py  download_examples.py  evaluate.py  explain.py  explain_global.py  explain_local.py  import.py  test_prototree_legacy.py  train.py
src/cabrnet/: main.py  main_gui.py
src/cabrnet/apps/: bayesian_optimizer.py  benchmark.py  evaluate.py  explain_global.py  explain_local.py  import.py  latent.py  show_latent_space.py  train.py
src/cabrnet/archs/custom_extractors/: __init__.py  onnx_backbone.py
src/cabrnet/archs/generic/: conv_extractor.py  decision.py  model.py  onnx_backbone.py
src/cabrnet/archs/pipnet/: decision.py  model.py
src/cabrnet/archs/protopnet/: decision.py  model.py
src/cabrnet/archs/protopool/: decision.py  model.py
src/cabrnet/archs/prototree/: decision.py  model.py
src/cabrnet/core/evaluation/: local_perturbation_analysis.py  relevance_analysis.py
src/cabrnet/core/generic/: model.py
src/cabrnet/core/interface/: analysis_gui.py  benchmark.py  design_gui.py  utils.py  (+1 more)
src/cabrnet/evaluation/: debug_explainer.py  local_perturbation_analysis.py  relevance_analysis.py
src/cabrnet/generic/: conv_extractor.py  decision.py  model.md  model.py
src/cabrnet/interface/: analysis_gui.py  benchmark.py  design_gui.py  utils.py  visualization.py
src/cabrnet/protopnet/: decision.py  model.py
src/cabrnet/protopool/: decision.py  model.py
src/cabrnet/prototree/: decision.py  model.py
src/cabrnet/utils/: custom_preprocess.py  data.md  data.py  exceptions.py  hacks.py  image.py  init.py  monitoring.py  optimizers.md  optimizers.py  parser.py  prototypes.py  save.py  similarities.py  system_info.py  train.py  tree.py
src/cabrnet/visualisation/: explainer.py  gradients.py  postprocess.py  prp.py  prp_utils.py  upsampling.py  view.py  visualize.md  visualizer.py
src/cabrnet/visualization/: explainer.py  gradients.py  postprocess.py  prp_utils.py  upsampling.py  view.py  visualizer.py
src/legacy/: fetch_legacy_repos.sh
src/legacy/patches/: protopnet.patch  prototree.patch
tests/: apps.py  imports.py  tests_protopnet.py  tests_prototree.py
tests/compatibility/: check_pipnet.py  check_protopnet.py  check_protopool.py  check_prototree.py  compatibility_tester.py  fetch_legacy_repos.sh
tests/compatibility/protopnet/: model_arch.yml  test_compatibility.py
tests/compatibility/prototree/: test_compatibility.py
tests/configs/: training.yml
tools/: check_docstrings.py  download_datasets.py  download_examples.py
(+100 files in other folders)
