[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cabrnet"
version = "1.0"
authors = [
    { name = "Romain Xu-Darme", email = "romain.xu-darme@cea.fr" },
    { name = "Aymeric Varasse", email = "aymeric.varasse@cea.fr" },
]
maintainers = [
    { name = "Romain Xu-Darme", email = "romain.xu-darme@cea.fr" },
    { name = "Aymeric Varasse", email = "aymeric.varasse@cea.fr" },
    { name = "Julien Girard-Satabin", email = "julien.girard2@cea.fr" },
    { name = "Alban Grastien", email = "alban.grastien@cea.fr" },
]
description = "Generic library for prototype-based classifiers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.13.0",
    "numpy>=1.19.5",
    "pillow~=10.3.0",
    "setuptools~=70.0.0",
    "tqdm~=4.66.3",
    "gdown~=4.7.1",
    "PyYAML~=6.0.1",
    "requests~=2.32.0",
    "matplotlib~=3.8.0",
    "scipy~=1.11.3",
    "scikit-image~=0.22.0",
    "loguru~=0.7.2",
    "zenodo-get~=1.5.1",
    "graphviz~=0.20.1",
    "opencv-python-headless~=4.8.1.78",
    "captum~=0.7.0",
    "Augmentor~=0.2.12",
    "mkdocs",
    "pydoc-markdown",
    "pymdown-extensions",
    "python-markdown-math",
    "pandas~=2.2.1",
    "py-cpuinfo~=9.0.0",
    "gradio~=4.33.0",
    "tensorboard~=2.17.0",
    "ray[tune]~=2.34.0",
    "optuna~=3.6.1",
]

[project.urls]
Homepage = "https://github.com/aiser-team/cabrnet"
Issues = "https://github.com/aiser-team/cabrnet/issues"

[project.scripts]
cabrnet = "cabrnet.main:main"
cabrnet-gui = "cabrnet.main_gui:main"

[tool.black]
line-length = 120
